--- a/specs/zh-tw/v1.0.0.md
+++ b/specs/zh-tw/v1.0.0.md
@@ -14,7 +14,7 @@ TOML aims to be a minimal configuration file format that's easy to read due to
 obvious semantics. TOML is designed to map unambiguously to a hash table. TOML
 should be easy to parse into data structures in a wide variety of languages.
 
-Table of contents
+目錄
 -----------------
 
 - [Spec](#spec)
@@ -24,7 +24,7 @@ Table of contents
 - [字串](#string)
 - [整數](#integer)
 - [浮點數](#float)
-- [Boolean](#boolean)
+- [布林值](#boolean)
 - [Offset Date-Time](#offset-date-time)
 - [Local Date-Time](#local-date-time)
 - [Local Date](#local-date)
@@ -33,8 +33,8 @@ Table of contents
 - [表格](#table)
 - [Inline Table](#inline-table)
 - [Array of Tables](#array-of-tables)
-- [Filename Extension](#filename-extension)
-- [MIME Type](#mime-type)
+- [副檔名](#filename-extension)
+- [MIME 類型](#mime-type)
 - [ABNF Grammar](#abnf-grammar)
 
 Spec
@@ -48,7 +48,7 @@ Spec
 註解
 -------
 
-以井字號表示該行接下來的內容為註解，唯一的例外是字串內容
+以「#」號表示該行接下來的內容為註解，唯一的例外是字串內容
 
 ```toml
 # 這是一整行的註解
@@ -56,7 +56,7 @@ key = "value"  # 這是在行末的註解
 another = "# 但這不是註解"
 ```
 
-註解中不允許存在 Tab (U+0000 to U+0008, U+000A to U+001F, U+007F)以外的控制字元
+註解中不允許存在 Tab (U+0000 to U+0008, U+000A to U+001F, U+007F) 以外的控制字元
 
 鍵值對
 --------------
@@ -144,7 +144,7 @@ physical.shape = "round"
 site."google.com" = true
 ```
 
-如果在 JSON 的世界裡，剛剛的 Code 會產生這樣的結構：
+對應到 JSON，剛剛的 Code 會產生這樣的結構：
 In JSON land, that would give you the following structure:
 
 ```json
@@ -359,9 +359,7 @@ If you're a frequent specifier of Windows paths or regular expressions, then
 having to escape backslashes quickly becomes tedious and error-prone. To help,
 TOML supports literal strings which do not allow escaping at all.
 
-**字串常值**是由單引號包住的。同基本字串一樣，一次須使用一整行：
-**Literal strings** are surrounded by single quotes. Like basic strings, they
-must appear on a single line:
+**字串常值**是由單引號包住的。同基本字串一樣，一次須佔一整行：
 
 ```toml
 # What you see is what you get.
@@ -411,8 +409,6 @@ or UTF-8 encoding. The handling of that encoding will be application-specific.
 -------
 
 整數是沒有小數部分的數字。正整數前可加正號，負整數前須加負號。
-Integers are whole numbers. Positive numbers may be prefixed with a plus sign.
-Negative numbers are prefixed with a minus sign.
 
 ```toml
 int1 = +99
@@ -432,15 +428,10 @@ int7 = 53_49_221  # Indian number system grouping
 int8 = 1_2_3_4_5  # VALID but discouraged
 ```
 
-Leading zeros are not allowed. Integer values `-0` and `+0` are valid and
-identical to an unprefixed zero.
+前導的數字 0 不允許存在。`-0` 與 `+0` 是合法的且與無正負號的 0 相同。
 
 非負整數的數值可以用十六進位、八進位、二進位系統表示。當使用這三種進位系統時，前導的「`+`」號不可存在，然而前置碼後的前導 0 可以存在。
 十六進位數值不區分大小寫。數字之間可用底線分隔，但不可置於前置碼與數值間。
-Non-negative integer values may also be expressed in hexadecimal, octal, or
-binary. In these formats, leading `+` is not allowed and leading zeros are
-allowed (after the prefix). Hex values are case-insensitive. Underscores are
-allowed between digits (but not between the prefix and the value).
 
 ```toml
 # 以 `0x` 開始表示十六進位數值
@@ -455,33 +446,28 @@ oct2 = 0o755 # 表示 Unix 檔案權限時很方便
 # 以 `0b` 開始表示二進位數值
 bin1 = 0b11010110
 ```
-
-Arbitrary 64-bit signed integers (from −2^63 to 2^63−1) should be accepted and
-handled losslessly. If an integer cannot be represented losslessly, an error
-must be thrown.
+任意 64 位元的有號整數（介於 -2^63 至 2^63-1）應被接受且無失真地處理。當整數無法被正確表示時，必須拋出錯誤。
 
 浮點數
 -----
 
-Floats should be implemented as IEEE 754 binary64 values.
+浮點數應採用與 IEEE 754 binary64 相同的實作方式。
 
-A float consists of an integer part (which follows the same rules as decimal
-integer values) followed by a fractional part and/or an exponent part. If both a
-fractional part and exponent part are present, the fractional part must precede
-the exponent part.
+浮點數的組成為一個整數部分（此部分遵循著與十進位整數相同的規則）後接著一個小數部分及/或指數部分。
+若小數部分及指數部分同時存在，則小數部分應先於指數部分。
 
 ```toml
-# fractional
+# 小數
 flt1 = +1.0
 flt2 = 3.1415
 flt3 = -0.01
 
-# exponent
+# 指數
 flt4 = 5e+22
 flt5 = 1e06
 flt6 = -2E-2
 
-# both
+# 兩者皆有
 flt7 = 6.626e-34
 ```
 
@@ -501,8 +487,7 @@ invalid_float_2 = 7.
 invalid_float_3 = 3.e+20
 ```
 
-Similar to integers, you may use underscores to enhance readability. Each
-underscore must be surrounded by at least one digit.
+同整數一樣，可以使用底線符號來提升可讀性。每個底線符號兩側須有至少一位數字。
 
 ```toml
 flt8 = 224_617.445_991_228
@@ -513,10 +498,10 @@ Float values `-0.0` and `+0.0` are valid and should map according to IEEE 754.
 Special float values can also be expressed. They are always lowercase.
 
 ```toml
-# infinity
-sf1 = inf  # positive infinity
-sf2 = +inf # positive infinity
-sf3 = -inf # negative infinity
+# 無窮大
+sf1 = inf  # 正無窮大
+sf2 = +inf # 正無窮大
+sf3 = -inf # 負無窮大
 
 # not a number
 sf4 = nan  # actual sNaN/qNaN encoding is implementation-specific
@@ -524,10 +509,10 @@ sf5 = +nan # same as `nan`
 sf6 = -nan # valid, actual encoding is implementation-specific
 ```
 
-Boolean
+布林值
 -------
 
-Booleans are just the tokens you're used to. Always lowercase.
+布林值就同您慣用的那樣子。須為小寫。
 
 ```toml
 bool1 = true
@@ -606,7 +591,7 @@ implementation-specific. If the value contains greater precision than the
 implementation can support, the additional precision must be truncated, not
 rounded.
 
-Array
+陣列
 -----
 
 Arrays are square brackets with values inside. Whitespace is ignored. Elements
@@ -994,16 +979,15 @@ points = [ { x = 1, y = 2, z = 3 },
            { x = 2, y = 4, z = 8 } ]
 ```
 
-Filename Extension
+副檔名
 ------------------
 
-TOML files should use the extension `.toml`.
+TOML 檔案應使用 `.toml` 作為副檔名。
 
-MIME Type
+MIME 類型
 ---------
 
-When transferring TOML files over the internet, the appropriate MIME type is
-`application/toml`.
+透過網際網路傳送 TOML 檔案時，適用的 MIME 類型為`application/toml`。
 
 ABNF Grammar
 ------------
