translate some strings

--- a/specs/zh-tw/v1.0.0.md
+++ b/specs/zh-tw/v1.0.0.md
@@ -14,6 +14,10 @@ TOML aims to be a minimal configuration file format that's easy to read due to
 obvious semantics. TOML is designed to map unambiguously to a hash table. TOML
 should be easy to parse into data structures in a wide variety of languages.
 
+TOML 的目標是成為一種語意清楚且簡潔明瞭的組態檔格式。
+TOML 被設計為可以無歧義地對應到雜湊表 (Hash table)。
+TOML 可以容易地在各種語言中剖析為資料結構。
+
 目錄
 -----------------
 
@@ -63,6 +67,9 @@ another = "# 但這不是註解"
 
 鍵值對 (key/value pair) 乃構成 TOML 文件的主要角色
 
+鍵、值分別在等號的左、右邊。
+鍵名與值周圍的空白會被忽略。
+鍵、等號、值必須在同一行上，但有些值可以被拆為多行。
 Keys are on the left of the equals sign and values are on the right. Whitespace
 is ignored around key names and values. The key, equals sign, and value must be
 on the same line (though some values can be broken over multiple lines).
@@ -84,14 +91,13 @@ key = "value"
 - [陣列](#array)
 - [Inline Table](#inline-table)
 
-Unspecified values are invalid.
+以上未列出的值都是無效/不合法的。
 
 ```toml
 key = # INVALID
 ```
 
-There must be a newline (or EOF) after a key/value pair. (See [Inline
-Table](#inline-table) for exceptions.)
+每對鍵值對後須有換行或 EOF 字元（關於例外情況，請參閱[行內表格](#inline-table)）
 
 ```
 first = "Tom" last = "Preston-Werner" # INVALID
@@ -145,7 +151,6 @@ site."google.com" = true
 ```
 
 對應到 JSON，剛剛的 Code 會產生這樣的結構：
-In JSON land, that would give you the following structure:
 
 ```json
 {
